[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_actix = { workspace = true }
actix-web = { version = "4.5", features = ["http2"] }
actix-files = { version = "0.6" }
actix-session = { version = "0.9.0", features = ["cookie-session"]}
actix-identity = { version = "0.7.1" }
surrealdb = { version = "1.0.0" }
serde = "1.0.190"
serde_json = "1.0.108"
env_logger = "0.11.4"
log = "0.4.20"
thiserror = "1.0.50"
async-trait = "0.1.74"
argon2 = "0.5.2"
chrono = "0.4.31"
dotenvy = "0.15.7"
actix-cors = "0.7.0"
futures-util = "0.3.29"
actix-utils = "3.0.1"
once_cell = "1.18.0"
